--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
-@charset "UTF-8";
+/**
+ * @link     https://github.com/stephweb/daw-css-normalize
+ * @author   stephweb <stephweb@live.fr>
+ * @license  MIT License
+ */
 
 
 /******************************* Reset et Normalize CSS *******************************/
