--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 /**
  * @link     https://github.com/stephweb/daw-css-normalize
- * @author   stephweb <stephweb@live.fr>
+ * @author   stephweb <contact@devandweb.fr>
  * @license  MIT License
  */
 
